--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&family=WindSong&display=swap');
+
 html, body {
 	margin: 0;
 	height: 100%;
