--- a/src/invitation/invitation.css
+++ b/src/invitation/invitation.css
@@ -33,7 +33,6 @@
     text-align: center;
 }
 
-
 .postalCard__content__one {
     font-size: 4vh;
     font-weight: bold;
@@ -191,5 +190,61 @@
     .invitation__picture img {
         width: 100%;
         height: auto;
+    }
+
+    .postalCard {
+        position: relative;
+        top: 0;
+        transform: translateY(0);
+        width: 100%;
+        margin: 0;
+        height: auto;
+    }
+
+    .postalCard__frame {
+        padding: 2px;
+    }
+
+    .postalCard__content__one {
+      font-size: 5vh;
+      margin-top: 10px;
+    }
+
+    .postalCard__content__two {
+        font-size: 10vh;
+        margin-top: calc(50vh / 6);
+    }
+
+    .postalCard__content__three {
+        font-size: 4vh;
+        margin-top: calc(40vh / 6);
+    }
+
+    .postalCard__content__four {
+        font-size: 4vh;
+        margin-top: 10px;
+    }
+
+    .postalCard__content__five {
+        font-size: 4vh;
+        margin-top: 10px;
+    }
+
+    .postalCard__content__six {
+        font-size: 2.5vh;
+        margin-top: calc(40vh / 6);
+    }
+
+    .postalCard__content__seven {
+        font-size: 4vh;
+        position: relative;
+        margin-top: 25px;
+
+        bottom: 0;
+        width: 100%;
+    }
+
+    .countdown__time {
+        font-size: 2em;
     }
 }
