--- a/src/invitation/invitation.css
+++ b/src/invitation/invitation.css
@@ -248,3 +248,34 @@
         font-size: 2em;
     }
 }
+
+@media screen and (max-width: 550px) {
+    /* set all the fonts based on the width */
+    .postalCard__content__one {
+        font-size: 6vw;
+    }
+
+    .postalCard__content__two {
+        font-size: 12vw;
+    }
+
+    .postalCard__content__three {
+        font-size: 5vw;
+    }
+
+    .postalCard__content__four {
+        font-size: 5vw;
+    }
+
+    .postalCard__content__five {
+        font-size: 5vw;
+    }
+
+    .postalCard__content__six {
+        font-size: 3vw;
+    }
+
+    .postalCard__content__seven {
+        font-size: 5vw;
+    }
+}
