--- a/src/invitation/invitation.css
+++ b/src/invitation/invitation.css
@@ -21,58 +21,58 @@
     color: #A5836E;
 }
 
-.postalCard__frame {
+.postalCard-frame {
     position: relative;
     height: calc(100% - 40px);
     padding: 15px;
 }
 
-.postalCard__content {
+.postalCard-content {
     border: 5px solid #A5836E;
     height: 100%;
     text-align: center;
 }
 
-.postalCard__content__one {
+.postalCard-content-one {
     font-size: 4vh;
     font-weight: bold;
     margin-top: 20px;
     font-family: 'Cinzel', serif;
 }
 
-.postalCard__content__two {
+.postalCard-content-two {
     font-size: 6.5vh;
     margin-top: calc(60vh / 6);
     font-family: 'WindSong', cursive;
     width: 98%;
 }
 
-.postalCard__content__three {
+.postalCard-content-three {
     font-size: 3vh;
     margin-top: calc(100% / 6);
     font-family: 'Cinzel', serif;
 }
 
-.postalCard__content__four {
+.postalCard-content-four {
     font-size: 3vh;
     font-weight: bold;
     margin-top: 20px;
     font-family: 'Cinzel', serif;
 }
 
-.postalCard__content__five {
+.postalCard-content-five {
     font-size: 3vh;
     margin-top: 20px;
     font-family: 'Cinzel', serif;
 }
 
-.postalCard__content__six {
+.postalCard-content-six {
     font-weight: bold;
     margin-top: calc(100% / 6);
     font-family: 'Cinzel', serif;
 }
 
-.postalCard__content__seven {
+.postalCard-content-seven {
     font-size: 2.5vh;
     position: absolute;
     bottom: 15px;
@@ -80,28 +80,28 @@
     font-family: 'Cinzel', serif;
 }
 
-.countdown__wrapper {
+.countdown-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
 }
 
-.countdown__time {
+.countdown-time {
     font-size: 3em;
     font-weight: bold;
     font-family: 'Cinzel', serif;
 }
 
-.countdown__wrapper div {
+.countdown-wrapper div {
     padding-left: 15px;
 }
 
-.countdown__wrapper div:first-child {
+.countdown-wrapper div:first-child {
     padding-left: 0;
 }
 
-.countdown__divider {
+.countdown-divider {
     font-size: 3em;
     font-weight: bold;
     font-family: 'Cinzel', serif;
@@ -109,7 +109,7 @@
     margin-bottom: 30px;
 }
 
-.invitation__picture {
+.invitation-picture {
     display: none;
 }
 
@@ -118,49 +118,49 @@
         height: 80vh;
     }
 
-    .postalCard__content__one {
+    .postalCard-content-one {
         font-size: 3vh;
         margin-top: 10px;
     }
 
-    .postalCard__content__two {
+    .postalCard-content-two {
         font-size: 7vh;
         margin-top: calc(50vh / 6);
     }
 
-    .postalCard__content__three {
+    .postalCard-content-three {
         font-size: 3vh;
         margin-top: calc(40vh / 6);
     }
 
-    .postalCard__content__four {
+    .postalCard-content-four {
         font-size: 3vh;
         margin-top: 10px;
     }
 
-    .postalCard__content__five {
+    .postalCard-content-five {
         font-size: 3vh;
         margin-top: 10px;
     }
 
-    .postalCard__content__six {
+    .postalCard-content-six {
         margin-top: calc(100% / 6);
     }
 
-    .postalCard__content__seven {
+    .postalCard-content-seven {
         font-size: 3vh;
         bottom: 10px;
     }
 
-    .countdown__time {
+    .countdown-time {
         font-size: 2em;
     }
 
-    .countdown__wrapper div {
+    .countdown-wrapper div {
         padding-left: 10px;
     }
 
-    .countdown__divider {
+    .countdown-divider {
         font-size: 2em;
     }
 
@@ -183,11 +183,11 @@
         display: none;
     }
 
-    .invitation__picture {
+    .invitation-picture {
         display: block;
     }
 
-    .invitation__picture img {
+    .invitation-picture img {
         width: 100%;
         height: auto;
     }
@@ -201,41 +201,41 @@
         height: auto;
     }
 
-    .postalCard__frame {
+    .postalCard-frame {
         padding: 2px;
     }
 
-    .postalCard__content__one {
+    .postalCard-content-one {
       font-size: 5vh;
       margin-top: 10px;
     }
 
-    .postalCard__content__two {
+    .postalCard-content-two {
         font-size: 10vh;
         margin-top: calc(50vh / 6);
     }
 
-    .postalCard__content__three {
+    .postalCard-content-three {
         font-size: 4vh;
         margin-top: calc(40vh / 6);
     }
 
-    .postalCard__content__four {
+    .postalCard-content-four {
         font-size: 4vh;
         margin-top: 10px;
     }
 
-    .postalCard__content__five {
+    .postalCard-content-five {
         font-size: 4vh;
         margin-top: 10px;
     }
 
-    .postalCard__content__six {
+    .postalCard-content-six {
         font-size: 2.5vh;
         margin-top: calc(40vh / 6);
     }
 
-    .postalCard__content__seven {
+    .postalCard-content-seven {
         font-size: 4vh;
         position: relative;
         margin-top: 25px;
@@ -244,38 +244,38 @@
         width: 100%;
     }
 
-    .countdown__time {
+    .countdown-time {
         font-size: 2em;
     }
 }
 
 @media screen and (max-width: 550px) {
     /* set all the fonts based on the width */
-    .postalCard__content__one {
+    .postalCard-content-one {
         font-size: 6vw;
     }
 
-    .postalCard__content__two {
+    .postalCard-content-two {
         font-size: 12vw;
     }
 
-    .postalCard__content__three {
+    .postalCard-content-three {
         font-size: 5vw;
     }
 
-    .postalCard__content__four {
+    .postalCard-content-four {
         font-size: 5vw;
     }
 
-    .postalCard__content__five {
+    .postalCard-content-five {
         font-size: 5vw;
     }
 
-    .postalCard__content__six {
+    .postalCard-content-six {
         font-size: 3vw;
     }
 
-    .postalCard__content__seven {
+    .postalCard-content-seven {
         font-size: 5vw;
     }
 }
