--- a/src/invitation/invitation.css
+++ b/src/invitation/invitation.css
@@ -42,8 +42,8 @@
 }
 
 .postalCard-content-two {
-    font-size: 6.5vh;
-    margin-top: calc(60vh / 6);
+    font-size: 80px;
+    margin-top: calc(40vh / 6);
     font-family: 'WindSong', cursive;
     width: 98%;
 }
@@ -120,12 +120,12 @@
     }
 
     .postalCard-content-one {
-        font-size: 3vh;
+        font-size: 5vh;
         margin-top: 10px;
     }
 
     .postalCard-content-two {
-        font-size: 7vh;
+        font-size: 9vh;
         margin-top: calc(50vh / 6);
     }
 
@@ -145,7 +145,7 @@
     }
 
     .postalCard-content-six {
-        margin-top: calc(100% / 6);
+        margin-top: calc(30vh / 6);
     }
 
     .postalCard-content-seven {
@@ -166,7 +166,6 @@
     }
 
     .postalCard {
-      background-color: white;
       width: 600px;
       height: 90vh;
   
@@ -175,7 +174,6 @@
       transform: translateY(-50%);
   
       margin-left: 50px;
-      color: #A5836E;
   }
 }
 
@@ -207,12 +205,12 @@
     }
 
     .postalCard-content-one {
-      font-size: 5vh;
+      font-size: 6vh;
       margin-top: 10px;
     }
 
     .postalCard-content-two {
-        font-size: 10vh;
+        font-size: min(14vh, 14vw);
         margin-top: calc(50vh / 6);
     }
 
@@ -251,13 +249,12 @@
 }
 
 @media screen and (max-width: 550px) {
-    /* set all the fonts based on the width */
     .postalCard-content-one {
-        font-size: 6vw;
+        font-size: 8vw;
     }
 
     .postalCard-content-two {
-        font-size: 12vw;
+        font-size: 15vw;
     }
 
     .postalCard-content-three {
